# devops-with-kubernetes

./: .gitignore  README.md
dummy_site_crd/: .env  Dockerfile  Makefile  README.md  example.yaml  pyproject.toml
dummy_site_crd/crd/: controller.py  main.py
dummy_site_crd/manifests/: crd.yaml  deployment.yaml  rbac.yaml
greeter/: .env  Dockerfile  Greeter.sln  GreeterClient.cs  (+2 more)
project/: .env  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.broadcaster  Dockerfile.cronjob  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  pyproject.toml
project/broadcaster/: main.py  settings.py
project/manifests/: config_backend.yaml  config_frontend.yaml  cronjob.yaml  db.yaml  db_backup.yaml  deployment _backend.yaml  deployment.yaml  deployment_backend.yaml  deployment_broadcaster.yaml  deployment_frontend.yaml  gateway.yml  ingress.yaml  kustomization.yaml  persistent_volume_claim.yml  route.yml  service.yaml  service_backend.yaml  service_fronend.yaml  service_frontend.yaml
project/manifests/base/: config_backend.yaml  config_frontend.yaml  cronjob.yaml  db.yaml  db_backup.yaml  deployment_backend.yaml  deployment_broadcaster.yaml  deployment_frontend.yaml  gateway.yml  kustomization.yaml  nats_values.yaml  persistent_volume_claim.yml  route.yml  service_backend.yaml  service_frontend.yaml
project/manifests/overlays/production/: kustomization.yaml
project/manifests/overlays/staging/: broadcaster-patch.yaml  cronjob-patch.yaml  kustomization.yaml
project/periodic_task/: main.py  pyproject.toml
project/todo_app/: config.py  dependencies.py  main.py  routes.py  tasks.py
project/todo_app/handlers/: health.py  index.py
project/todo_app/services/: todo_backend.py
project/todo_app/static/: styles.css
project/todo_app/templates/: index.jinja2  todo_item.jinja2  todos.jinja2
project/todo_backend/: config.py  main.py  publisher.py  routes.py
project/todo_backend/handlers/: health.py  todos.py
project/todo_backend/handlers/schemas/: __init__.py  todo.py
project/todo_backend/models/: __init__.py  todo.py
(+77 files in other folders)
