[project]
name = "dummy-site-crd"
version = "0.1.0"
description = "Custom controller for DummySite CRD"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "asyncio>=4.0.0",
    "kubernetes>=35.0.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
start = "crd.main:main"
