[project]
name = "dvk_project"
version = "1.13"
description = "Todo App for DevOps with Kubernetes course"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.116.0",
]
